Added mention me handler

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # The public domain name of where you host your application
-PUBLIC_HOSTNAME=conversationalbot.azurewebsites.net
+PUBLIC_HOSTNAME=poc-git-main-sandlogic.vercel.app
 
 # Id of the Microsoft Teams application
 APPLICATION_ID=5f123600-560c-11ef-ba70-c11b817941d0
@@ -8,7 +8,7 @@ PACKAGE_NAME=conversationalbot
 
 # App Id and App Password for the Bot Framework bot
 MICROSOFT_APP_ID=eb615f6f-535c-407c-9301-fc37cf4838b6
-MICROSOFT_APP_PASSWORD=
+MICROSOFT_APP_PASSWORD=ji08Q~pW0~qCoxD470efK1Liujv~dmoyiC~SibSY
 
 # Port for local debugging
 PORT=3007
