--- a/src/manifest/manifest.json
+++ b/src/manifest/manifest.json
@@ -32,8 +32,7 @@
       "isNotificationOnly": false,
       "scopes": [
         "team",
-        "personal",
-        "groupchat"
+        "personal"
       ],
       "commandLists": [
         {
