--- a/.env
+++ b/.env
@@ -1,36 +1,4 @@
-# The public domain name of where you host your application
-PUBLIC_HOSTNAME=poc-git-main-sandlogic.vercel.app
-
-# Id of the Microsoft Teams application
-APPLICATION_ID=5f123600-560c-11ef-ba70-c11b817941d0
-# Package name of the Microsoft Teams application
-PACKAGE_NAME=conversationalbot
-
-# App Id and App Password for the Bot Framework bot
-MICROSOFT_APP_ID=eb615f6f-535c-407c-9301-fc37cf4838b6
-MICROSOFT_APP_PASSWORD=ji08Q~pW0~qCoxD470efK1Liujv~dmoyiC~SibSY
-
-# Port for local debugging
-PORT=3007
-
-# Security token for the default outgoing webhook
-SECURITY_TOKEN=
-
-# ID of the Outlook Connector
-CONNECTOR_ID=
-
-# Application Insights instrumentation key
-APPINSIGHTS_INSTRUMENTATIONKEY=
-
-# NGROK configuration for development
-# NGROK authentication token (leave empty for anonymous)
-NGROK_AUTH=
-# NGROK sub domain. ex "myapp" or  (leave empty for random)
-NGROK_SUBDOMAIN=
-# NGROK region. (us, eu, au, ap - default is us)
-NGROK_REGION=
-
-# Debug settings, default logging "msteams"
-DEBUG=msteams
-
-MICROSOFT_APP_ID=eb615f6f-535c-407c-9301-fc37cf4838b6
+MicrosoftAppType=
+MicrosoftAppId=
+MicrosoftAppPassword=
+MicrosoftAppTenantId=
