--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "src/server/server.ts",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
     ]
-}
+  }
+  
