--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MicrosoftAppType=
-MicrosoftAppId=
-MicrosoftAppPassword=
-MicrosoftAppTenantId=
+MicrosoftAppType=SingleTenant
+MicrosoftAppId=eb615f6f-535c-407c-9301-fc37cf4838b6
+MicrosoftAppPassword=ji08Q~pW0~qCoxD470efK1Liujv~dmoyiC~SibSY
+MicrosoftAppTenantId=b9271ed2-6839-4c21-9e59-c0a34545c87a
